Added main menu

--- a/Vaultware.vcxproj
+++ b/Vaultware.vcxproj
@@ -140,7 +140,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GeneratePasswordPanel.cpp" />
+    <ClCompile Include="src\AddCredentialPanel.cpp" />
+    <ClCompile Include="src\CredentialsGrid.cpp" />
+    <ClCompile Include="src\GeneratePasswordPanel.cpp" />
     <ClCompile Include="src\LoginPanel.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\RNG.cpp" />
@@ -152,6 +154,8 @@
     <ClInclude Include="3rd_party\SQLite3\error_code.hpp" />
     <ClInclude Include="3rd_party\SQLite3\SQLite3.hpp" />
     <ClInclude Include="3rd_party\SQLite3\Statement.hpp" />
+    <ClInclude Include="include\AddCredentialPanel.hpp" />
+    <ClInclude Include="include\CredentialsGrid.hpp" />
     <ClInclude Include="include\Credential.hpp" />
     <ClInclude Include="include\PasswordGenerator.hpp" />
     <ClInclude Include="include\RNG.hpp" />
