--- a/Vaultware.vcxproj
+++ b/Vaultware.vcxproj
@@ -131,6 +131,7 @@
       <PreprocessorDefinitions>WIN32_LEAN_AND_MEAN;NOGDI;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);DEBUG=0</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)/3rd_party;$(ProjectDir)/include;$(WXWIN)/include;$(WXWIN)/include/msvc</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -169,6 +170,9 @@
   <ItemGroup>
     <ClInclude Include="include\GeneratePasswordPanel.hpp" />
     <ClInclude Include="include\LoginPanel.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="main.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
